--- a/generador_de_variables_pseudo-aleatorias.ipynb
+++ b/generador_de_variables_pseudo-aleatorias.ipynb
@@ -1204,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bcfbb381",
+   "id": "3b333d4a",
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "09310c30",
+   "id": "5f0b1ff0",
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "cba9bcda",
+   "id": "b77014e5",
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "036ed8eb",
+   "id": "14df21f3",
    "metadata": {},
    "source": [
     "Ahora sí hay distribución, más no es realmente uniforme, podemos ver que existen muchas variaciones en la distribución, hay cerca de 400 datos que se repiten en el mismo dato"
@@ -1432,7 +1432,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "8d54c501",
+   "id": "80d6b573",
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1466,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e0c88d65",
+   "id": "b7801b28",
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "054f82f6",
+   "id": "e358a82e",
    "metadata": {},
    "outputs": [
     {
@@ -1779,7 +1779,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "08b0aaef",
+   "id": "a005dddc",
    "metadata": {},
    "outputs": [
     {
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a61609c",
+   "id": "b02e7000",
    "metadata": {},
    "source": [
     "Recordemos que para l'ecuyer y que sea viable, existe la siguiente condición:\n",
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb51c4a2",
+   "id": "6f064278",
    "metadata": {},
    "source": [
     "n/k= nos dice el promedio que deberían caer por cada sub intervalo, es decir por cada subintervalo deberían caer de manera uniforme 5 por cada uno.\n",
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dc6d0f2",
+   "id": "2c314db1",
    "metadata": {},
    "source": [
     "En el caso del presente generador, entonces, nos indicaría que no es bueno al tener más de 400 escenarios cargados en un solo intervalo."
@@ -1833,7 +1833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f49e24e7",
+   "id": "4f424156",
    "metadata": {},
    "source": [
     "PARA CALCULAR LA FRECUENCIA (ESPERADA) DE NUESTRO GENERADOR:"
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d0e541",
+   "id": "a794b448",
    "metadata": {},
    "source": [
     "($f_i$ - n/k)**2"
@@ -1850,7 +1850,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "38a533af",
+   "id": "963b3f4f",
    "metadata": {},
    "outputs": [
     {
@@ -2025,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b0a534db",
+   "id": "16b1cb81",
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2054,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "1716f852",
+   "id": "7333c5fa",
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71dffb13",
+   "id": "ebbde4d4",
    "metadata": {},
    "source": [
     "### Estadistico de prueba"
@@ -2083,7 +2083,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "ee7d68ee",
+   "id": "c8f1c285",
    "metadata": {},
    "outputs": [
     {
@@ -2106,7 +2106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cc09533",
+   "id": "40d5cf25",
    "metadata": {},
    "source": [
     "### Grados de libertad"
@@ -2115,7 +2115,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "4df9f6bb",
+   "id": "2e237ec4",
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "589b0eb7",
+   "id": "6fadd509",
    "metadata": {},
    "source": [
     "### Nivel alpha"
@@ -2145,7 +2145,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "d16e4aba",
+   "id": "2f651f8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2155,7 +2155,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "c562116f",
+   "id": "4f99bdb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2166,7 +2166,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "0679d6bb",
+   "id": "d8d6b1d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2177,7 +2177,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "1af3c594",
+   "id": "79dacf36",
    "metadata": {},
    "outputs": [
     {
@@ -2210,7 +2210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f76594b",
+   "id": "c31885d6",
    "metadata": {},
    "source": [
     "Ya que la distribución Chi cuadrada no existe debido a la falta de uniformidad en los datos intentaremos con otra libreria para generar nuestros números aleatorios, comenzaremos la tabla desde Ui"
@@ -2219,7 +2219,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "0cef1777",
+   "id": "fcae7445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2230,7 +2230,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "71a7d94e",
+   "id": "583d588e",
    "metadata": {},
    "outputs": [
     {
@@ -2338,7 +2338,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "2c7bc6cd",
+   "id": "834222b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2350,7 +2350,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "dec4e310",
+   "id": "82f818ac",
    "metadata": {},
    "outputs": [
     {
@@ -2470,7 +2470,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "f50999c3",
+   "id": "b9799bda",
    "metadata": {},
    "outputs": [
     {
@@ -2491,7 +2491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6343d96",
+   "id": "9132e3c1",
    "metadata": {},
    "source": [
     "Con esta librería se ven un poco más distribuidos y uniformes entre 0 y 1"
@@ -2500,7 +2500,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "c603270f",
+   "id": "56b4cea9",
    "metadata": {},
    "outputs": [
     {
@@ -2631,7 +2631,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "10ad55c9",
+   "id": "d0bf5f40",
    "metadata": {},
    "outputs": [
     {
@@ -2749,8 +2749,282 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 187,
+   "id": "3f5ff3ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Limite inferior</th>\n",
+       "      <th>Limite superior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>4.95</td>\n",
+       "      <td>4.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>4.96</td>\n",
+       "      <td>4.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>4.97</td>\n",
+       "      <td>4.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>4.98</td>\n",
+       "      <td>4.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>4.99</td>\n",
+       "      <td>5.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Limite inferior  Limite superior\n",
+       "0               0.00             0.01\n",
+       "1               0.01             0.02\n",
+       "2               0.02             0.03\n",
+       "3               0.03             0.04\n",
+       "4               0.04             0.05\n",
+       "..               ...              ...\n",
+       "495             4.95             4.96\n",
+       "496             4.96             4.97\n",
+       "497             4.97             4.98\n",
+       "498             4.98             4.99\n",
+       "499             4.99             5.00\n",
+       "\n",
+       "[500 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lim_inf = []\n",
+    "lim_sup = []\n",
+    "\n",
+    "for i in range(500):\n",
+    "    inferior = i/100\n",
+    "    superior = (inferior + .01)\n",
+    "    lim_inf.append(inferior)\n",
+    "    lim_sup.append(superior)\n",
+    "\n",
+    "limites = pd.DataFrame({'Limite inferior' : lim_inf,\n",
+    "                        'Limite superior' : lim_sup})\n",
+    "\n",
+    "limites"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "b6d0d13a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num</th>\n",
+       "      <th>ui</th>\n",
+       "      <th>Limite inferior</th>\n",
+       "      <th>Limite superior</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000297</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.002127</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.005149</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.012734</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.012860</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>496</td>\n",
+       "      <td>0.990047</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>4.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>497</td>\n",
+       "      <td>0.990637</td>\n",
+       "      <td>4.96</td>\n",
+       "      <td>4.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>498</td>\n",
+       "      <td>0.990909</td>\n",
+       "      <td>4.97</td>\n",
+       "      <td>4.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>498</th>\n",
+       "      <td>499</td>\n",
+       "      <td>0.993190</td>\n",
+       "      <td>4.98</td>\n",
+       "      <td>4.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>500</td>\n",
+       "      <td>0.998628</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>5.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     num        ui  Limite inferior  Limite superior\n",
+       "0      1  0.000297             0.00             0.01\n",
+       "1      2  0.002127             0.01             0.02\n",
+       "2      3  0.005149             0.02             0.03\n",
+       "3      4  0.012734             0.03             0.04\n",
+       "4      5  0.012860             0.04             0.05\n",
+       "..   ...       ...              ...              ...\n",
+       "495  496  0.990047             4.95             4.96\n",
+       "496  497  0.990637             4.96             4.97\n",
+       "497  498  0.990909             4.97             4.98\n",
+       "498  499  0.993190             4.98             4.99\n",
+       "499  500  0.998628             4.99             5.00\n",
+       "\n",
+       "[500 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tabla ['Limite inferior'] = limites['Limite inferior']\n",
+    "tabla ['Limite superior'] = limites['Limite superior']\n",
+    "tabla"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4cf3f8e8",
+   "id": "88afad52",
    "metadata": {},
    "outputs": [],
    "source": []
